--- a/MainCodeChallenge/Views/Account/login.cshtml
+++ b/MainCodeChallenge/Views/Account/login.cshtml
@@ -17,7 +17,7 @@
 </head>
 <body>
     <main>
-        <div class="row">
+        <div >
             <div class="colm-logo">
                 @* <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Logo">*@
                 <h1>Kasra Code Challenge</h1>
