--- a/MainCodeChallenge/Views/Challenge/detailsAnswerAdmin.cshtml
+++ b/MainCodeChallenge/Views/Challenge/detailsAnswerAdmin.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MainCodeChallenge.Models.ApprovalStatus
 <link href="~/Content/ChDetail.css" rel="stylesheet" />
 <div>
-    <h4>Status</h4>
+    <h4>ApprovalStatus </h4>
 
     <hr />
     <dl>
@@ -22,15 +22,15 @@
             @Html.DisplayFor(model => model.approvalStatus)
         </dd>
 
-        @if ( Model.ApprovalDate != null)
+        @if (Model.ApprovalDate != null)
         {
-        <dt>
-            @Html.DisplayNameFor(model => model.ApprovalDate):
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.ApprovalDate):
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ApprovalDate)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.ApprovalDate)
+            </dd>
         }
 
         <dt>
@@ -49,6 +49,14 @@
             @Html.TextAreaFor(model => model.SAnswer, new { Id = "TxtAns", @readonly = true })
         </dd>
 
+        <dd>
+            <br />
+
+        </dd>
+        <dd>
+            <button class="gradientButton" onclick="location.href='@Url.Action("FinalApprovalAdmin", "Challenge", new {Sid= Model.SId } )';return false;"> FinalApproval </button>
+        </dd>
 
     </dl>
+
 </div>
