--- a/MainCodeChallenge/Views/Account/AdminPage.cshtml
+++ b/MainCodeChallenge/Views/Account/AdminPage.cshtml
@@ -17,7 +17,7 @@
 <br />
 
 <div>
-    
+
 
     @grid.GetHtml(
     columns: new[]
@@ -26,21 +26,40 @@
             grid.Column(columnName:"Qid",header:"Question ID"),
             grid.Column(columnName:"QName", header:"Question Name"),
             grid.Column(columnName:"CT_Name", header:"category"),
-            grid.Column(columnName:"QDescription", header:"Question Description",format: @<text>@item.QDescription.Substring(0, 180) .... </text>),
-grid.Column(columnName:"POwnerName",header:"Question Owner"),
-grid.Column(columnName:"QLevel",header:"Question Level"),
-grid.Column(columnName:"QRpoint",header:"QPoints Required"),
-grid.Column(columnName:"CountOfA",header:"Number of volunteers"),
-grid.Column(header: "Action",
-format: (item) => new HtmlString("<a href=" + @Url.Action("DetailsChallengeAdmin","Challenge",new { Qid = item.Qid }  ) +
-" title='DetailsChallenge' ><i class='glyphicon glyphicon-search'> </i><span class='sr-only'>Detail</span> </a> "
-)
-)
+            grid.Column(columnName:"QDescription", header:"Question Description",format: 
+
+                            @<text>
+                                @{
+                   string Ans = item.QDescription;
+
+                   if(Ans.Length>180)
+                   {
+                    Ans=item.QDescription.Substring(0, 180) + "....";
+                   } else
+                   {
+                    Ans=item.QDescription;
+                   }
+                                }
+                                @Ans
+                            </text>
 
 
 
-}
-)
+                      ),
+      grid.Column(columnName:"POwnerName",header:"Question Owner"),
+      grid.Column(columnName:"QLevel",header:"Question Level"),
+      grid.Column(columnName:"QRpoint",header:"QPoints Required"),
+      grid.Column(columnName:"CountOfA",header:"Number of volunteers"),
+      grid.Column(header: "Action",
+      format: (item) => new HtmlString("<a href=" + @Url.Action("DetailsChallengeAdmin","Challenge",new { Qid = item.Qid }  ) +
+      " title='DetailsChallenge' ><i class='glyphicon glyphicon-search'> </i><span class='sr-only'>Detail</span> </a> "
+      )
+      )
+
+
+
+      }
+      )
 
 
 </div>
